--- a/portfolio.html
+++ b/portfolio.html
@@ -25,14 +25,15 @@
 </ul>
       </nav>
     </aside>
-    <!-- Contenido principal -->
+      <!-- Contenido principal -->
     <main class="main-content">
-      <header class="header" id="inicio">
-        <div class="logo">
-          <img src="img/wesstar.png" alt="Logo WESSTYLE" />
-        </div>
+       <header class="header" id="inicio">
+	   <div class="logo">
+  <img src="img/wesstar_1.svg" alt="Logo WESSTYLE" />
+</div>
         <h2>WESSTYLE</h2>
-      </header>
+      </header> 
+	  
  <section class="portafolio" id="portafolio">
         <h3>Trabajos Realizados</h3>
         <div class="album-grid">
