--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WESSTYLE – Portafolio</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="icon" type="image/png" href="img/wesstar 004.png" />
+  <link rel="icon" type="image/ico" href="img/wesstar.ico" />
   <!-- Gotham alternativa si no tenés licencia -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet" />
 </head>
