--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/ico" href="img/wesstar.ico" />
   <!-- Gotham alternativa si no tenés licencia -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet" />
+  <meta property="og:title" content="WESSTYLE" />
+<meta property="og:description" content="Priorizamos la estética." />
+<meta property="og:image" content="img/vistaprevia.png" />
+<meta property="og:url" content="https://wesstyle.site/" />
+<meta property="og:type" content="website" />
+
 </head>
 <body>
 <!-- Botón hamburguesa para móvil -->
