--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -59,6 +59,11 @@
   <h3>Trabajos Realizados</h3>
   <div class="album-grid">
     <!-- Álbum 1 -->
+	<div class="album">
+      <img src="img/reversionado.png" alt="Diseño 3" class="album-img" />
+      <h4>REVERSIONADO</h4>
+      <a href="https://open.spotify.com/intl-es/artist/6Qc8W2M7afjKLLOLoc0zjW target="_blank">RodriiLA</a>
+    </div>
     <div class="album">
   <img src="img/cover1.jpg" alt="Diseño 1" class="album-img" />
   <h4>En Mi Mente <3</h4>
@@ -73,11 +78,7 @@
     </div>
 
     <!-- Álbum 3 -->
-    <div class="album">
-      <img src="img/cover3.png" alt="Diseño 3" class="album-img" />
-      <h4>AW</h4>
-      <a href="https://open.spotify.com/artist/43OLUHyyVleOSSfc4aPgbE?si=Dl9OBuKxSLSzYu4Gu1z9Dw" target="_blank">ONCE</a>
-    </div>
+
   </div>
 
   <!-- Botón "Ver más" -->
