--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,11 @@
         <h3>Trabajos Realizados</h3>
         <div class="album-grid">
               <!-- Álbum 1 -->
+	<div class="album">
+  <img src="img/reversionado.png" alt="REVERSIONADO" class="album-img" />
+  <h4>REVERSIONADO</h4>
+  <a href="https://open.spotify.com/intl-es/artist/6Qc8W2M7afjKLLOLoc0zjW" target="_blank">RodriiLA</a>
+</div>
     <div class="album">
   <img src="img/cover1.jpg" alt="Diseño 1" class="album-img" />
   <h4>En Mi Mente <3</h4>
@@ -63,8 +68,17 @@
       <h4>AW</h4>
       <a href="https://open.spotify.com/artist/43OLUHyyVleOSSfc4aPgbE?si=Dl9OBuKxSLSzYu4Gu1z9Dw" target="_blank">ONCE</a>
     </div>
+	<div class="album">
+  <img src="img/rodriila.png" alt="REVERSIONADO" class="album-img" />
+  <h4>REVERSIONADO</h4>
+  <a href="https://open.spotify.com/intl-es/artist/6Qc8W2M7afjKLLOLoc0zjW" target="_blank">RodriiLA</a>
+</div>
 		  
-		  
+		  <div class="album">
+            <img src="img/kloufrens.png" alt="Diseño 3" class="album-img" />
+            <h4>Kloufrens (Cumbia)</h4>
+            <a href="https://open.spotify.com" target="_blank">JvnRoman</a>
+          </div>
 		  <div class="album">
             <img src="img/cover7.png" alt="Diseño 3" class="album-img" />
             <h4>Campera de adidas</h4>
@@ -85,7 +99,7 @@
 		  	<div class="album">
             <img src="img/ramma.png" alt="Cover Art" class="album-img" />
             <h4>Since 04 (Conceptual)</h4>
-            <a href="https://open.spotify.com/intl-es/artist/7b0pdDyPV9f9hyDXAhk4Sg" target="_blank">Ramma</a>
+            <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
 
 		  </div>
 		  	<div class="album">
@@ -96,7 +110,7 @@
 		  <div class="album">
             <img src="img/duki.png" alt="Cover Art" class="album-img" />
             <h4>Wanakin (Conceptual)</h4>
-            <a href="https://open.spotify.com/intl-es/artist/1bAftSH8umNcGZ0uyV7LMg" target="_blank">Duki</a>
+            <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
           </div>
 		   <div class="album">
             <img src="img/ahogado.png" alt="Cover Art" class="album-img" />
