--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
 </div>
 		  
 		  <div class="album">
-            <img src="img/kloufrens.png" alt="Diseño 3" class="album-img" />
+            <img src="img/KLOUFRENS.png" alt="Diseño 3" class="album-img" />
             <h4>Kloufrens (Cumbia)</h4>
             <a href="https://open.spotify.com" target="_blank">JvnRoman</a>
           </div>
