--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
 		  <div class="album">
             <img src="img/travis.png" alt="Cover Art" class="album-img" />
             <h4>Utopia (Conceptual)</h4>
-            <a href="https://www.instagram.com/wesstyle.arg" target="_blank">Travis Scott</a>
+            <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
           </div>
 		  </div>
     </div>
