--- a/portfolio.html
+++ b/portfolio.html
@@ -39,86 +39,86 @@
         <div class="album-grid">
               <!-- Álbum 1 -->
 	<div class="album">
-  <img src="img/reversionado.png" alt="REVERSIONADO" class="album-img" />
+  <img src="img/reversionado.png" loading="lazy" alt="REVERSIONADO" class="album-img" />
   <h4>REVERSIONADO</h4>
   <a href="https://open.spotify.com/intl-es/artist/6Qc8W2M7afjKLLOLoc0zjW" target="_blank">RodriiLA</a>
 </div>
     <div class="album">
-  <img src="img/cover1.jpg" alt="Diseño 1" class="album-img" />
+  <img src="img/cover1.jpg" loading="lazy" alt="Diseño 1" class="album-img" />
   <h4>En Mi Mente <3</h4>
   <a href="https://open.spotify.com/intl-es/track/3x9FFVDEmXHarrLdn06yNJ?si=36c2c4e762654472" target="_blank">Siroe</a>
 </div>
 
     <!-- Álbum 2 -->
     <div class="album">
-      <img src="img/cover2.png" alt="Diseño 2" class="album-img" />
+      <img src="img/cover2.png" loading="lazy" alt="Diseño 2" class="album-img" />
       <h4>Vuelvo a caer</h4>
       <a href="https://open.spotify.com/intl-es/track/70Y7oaZK2Xh1XXBZh0caeN?si=5d371f86abeb47f7" target="_blank">NIRO</a>
     </div>
 		<!-- Álbum 4 -->
           <div class="album">
-            <img src="img/cover4.png" alt="Diseño 4" class="album-img" />
+            <img src="img/cover4.png" loading="lazy" alt="Diseño 4" class="album-img" />
             <h4>Sincero</h4>
             <a href="https://open.spotify.com/intl-es/track/3aK14UjWrMTjZCZjhK872Z?si=9ef885cc48b648d8" target="_blank">BARI</a>
           </div>
 		  
     <!-- Álbum 3 -->
     <div class="album">
-      <img src="img/cover3.png" alt="Diseño 3" class="album-img" />
+      <img src="img/cover3.png" loading="lazy" alt="Diseño 3" class="album-img" />
       <h4>AW</h4>
       <a href="https://open.spotify.com/artist/43OLUHyyVleOSSfc4aPgbE?si=Dl9OBuKxSLSzYu4Gu1z9Dw" target="_blank">ONCE</a>
     </div>
 	<div class="album">
-  <img src="img/rodriila.png" alt="REVERSIONADO" class="album-img" />
+  <img src="img/rodriila.png" loading="lazy" alt="REVERSIONADO" class="album-img" />
   <h4>REVERSIONADO</h4>
   <a href="https://open.spotify.com/intl-es/artist/6Qc8W2M7afjKLLOLoc0zjW" target="_blank">RodriiLA</a>
 </div>
 		  
 		  <div class="album">
-            <img src="img/KLOUFRENS.png" alt="Diseño 3" class="album-img" />
+            <img src="img/KLOUFRENS.png" loading="lazy" alt="Diseño 3" class="album-img" />
             <h4>Kloufrens (Cumbia)</h4>
-            <a href="https://open.spotify.com" target="_blank">JvnRoman</a>
+            <a href="https://open.spotify.com/intl-es/artist/5QdqKQ0RTopSWMOuZVUkIO" target="_blank">JvnRoman</a>
           </div>
 		  <div class="album">
-            <img src="img/cover7.png" alt="Diseño 3" class="album-img" />
+            <img src="img/cover7.png" loading="lazy" alt="Diseño 3" class="album-img" />
             <h4>Campera de adidas</h4>
-            <a href="https://open.spotify.com" target="_blank">JvnRoman</a>
+            <a href="https://open.spotify.com/intl-es/artist/5QdqKQ0RTopSWMOuZVUkIO" target="_blank">JvnRoman</a>
           </div>
 		<!-- Álbum 5 -->
           <div class="album">
-            <img src="img/cover5.png" alt="Diseño 4" class="album-img" />
+            <img src="img/cover5.png" loading="lazy" alt="Diseño 4" class="album-img" />
             <h4>EASY</h4>
             <a href="https://open.spotify.com/artist/1VMUauDPFXyBM4VTmQZREA?si=H1xO77fzS-CWLaihp5Krqg" target="_blank">Big De Litto</a>
           </div>
 		  <!-- Álbum 6-->
           <div class="album">
-            <img src="img/cover6.png" alt="Diseño 3" class="album-img" />
+            <img src="img/cover6.png" loading="lazy" alt="Diseño 3" class="album-img" />
             <h4>Eight (Conceptual)</h4>
             <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
           </div>
 		  	<div class="album">
-            <img src="img/ramma.png" alt="Cover Art" class="album-img" />
+            <img src="img/ramma.png" loading="lazy" alt="Cover Art" class="album-img" />
             <h4>Since 04 (Conceptual)</h4>
             <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
 
 		  </div>
 		  	<div class="album">
-            <img src="img/city.png" alt="Cover Art" class="album-img" />
+            <img src="img/city.png" loading="lazy" alt="Cover Art" class="album-img" />
             <h4>Town (Conceptual)</h4>
             <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
           </div>
 		  <div class="album">
-            <img src="img/duki.png" alt="Cover Art" class="album-img" />
+            <img src="img/duki.png" loading="lazy" alt="Cover Art" class="album-img" />
             <h4>Wanakin (Conceptual)</h4>
             <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
           </div>
 		   <div class="album">
-            <img src="img/ahogado.png" alt="Cover Art" class="album-img" />
+            <img src="img/ahogado.png" loading="lazy" alt="Cover Art" class="album-img" />
             <h4>Ahogado (Conceptual)</h4>
             <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
           </div>
 		  <div class="album">
-            <img src="img/travis.png" alt="Cover Art" class="album-img" />
+            <img src="img/travis.png" loading="lazy" alt="Cover Art" class="album-img" />
             <h4>Utopia (Conceptual)</h4>
             <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
           </div>
