--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <!-- Botón hamburguesa para móvil -->
   <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
 
   <div class="app-container">
-  <!-- Sidebar estilo Spotify -->
     <aside class="sidebar">
       <nav class="menu">
         <ul>
@@ -37,34 +35,32 @@
  <section class="portafolio" id="portafolio">
         <h3>Trabajos Realizados</h3>
         <div class="album-grid">
-              <!-- Álbum 1 -->
+
 	<div class="album">
   <img src="img/reversionado.png" loading="lazy" alt="REVERSIONADO" class="album-img" />
   <h4>REVERSIONADO</h4>
   <a href="https://open.spotify.com/intl-es/artist/6Qc8W2M7afjKLLOLoc0zjW" target="_blank">RodriiLA</a>
 </div>
     <div class="album">
-  <img src="img/cover1.jpg" loading="lazy" alt="Diseño 1" class="album-img" />
+  <img src="img/cover1.jpg" loading="lazy" alt="EN MI MENTE" class="album-img" />
   <h4>En Mi Mente <3</h4>
   <a href="https://open.spotify.com/intl-es/track/3x9FFVDEmXHarrLdn06yNJ?si=36c2c4e762654472" target="_blank">Siroe</a>
 </div>
 
-    <!-- Álbum 2 -->
     <div class="album">
-      <img src="img/cover2.png" loading="lazy" alt="Diseño 2" class="album-img" />
+      <img src="img/cover2.png" loading="lazy" alt="VUELVO A CAER" class="album-img" />
       <h4>Vuelvo a caer</h4>
       <a href="https://open.spotify.com/intl-es/track/70Y7oaZK2Xh1XXBZh0caeN?si=5d371f86abeb47f7" target="_blank">NIRO</a>
     </div>
-		<!-- Álbum 4 -->
+
           <div class="album">
-            <img src="img/cover4.png" loading="lazy" alt="Diseño 4" class="album-img" />
+            <img src="img/cover4.png" loading="lazy" alt="SINCERO" class="album-img" />
             <h4>Sincero</h4>
             <a href="https://open.spotify.com/intl-es/track/3aK14UjWrMTjZCZjhK872Z?si=9ef885cc48b648d8" target="_blank">BARI</a>
           </div>
 		  
-    <!-- Álbum 3 -->
     <div class="album">
-      <img src="img/cover3.png" loading="lazy" alt="Diseño 3" class="album-img" />
+      <img src="img/cover3.png" loading="lazy" alt="AMY WINEHOUSE" class="album-img" />
       <h4>AW</h4>
       <a href="https://open.spotify.com/artist/43OLUHyyVleOSSfc4aPgbE?si=Dl9OBuKxSLSzYu4Gu1z9Dw" target="_blank">ONCE</a>
     </div>
@@ -75,27 +71,32 @@
 </div>
 		  
 		  <div class="album">
-            <img src="img/KLOUFRENS.png" loading="lazy" alt="Diseño 3" class="album-img" />
+            <img src="img/KLOUFRENS.png" loading="lazy" alt="KLOUFRENS" class="album-img" />
             <h4>Kloufrens (Cumbia)</h4>
             <a href="https://open.spotify.com/intl-es/artist/5QdqKQ0RTopSWMOuZVUkIO" target="_blank">JvnRoman</a>
           </div>
 		  <div class="album">
-            <img src="img/cover7.png" loading="lazy" alt="Diseño 3" class="album-img" />
+            <img src="img/cover7.png" loading="lazy" alt="CAMPERA DE ADIDAS" class="album-img" />
             <h4>Campera de adidas</h4>
             <a href="https://open.spotify.com/intl-es/artist/5QdqKQ0RTopSWMOuZVUkIO" target="_blank">JvnRoman</a>
           </div>
-		<!-- Álbum 5 -->
           <div class="album">
-            <img src="img/cover5.png" loading="lazy" alt="Diseño 4" class="album-img" />
+            <img src="img/cover5.png" loading="lazy" alt="EASY" class="album-img" />
             <h4>EASY</h4>
             <a href="https://open.spotify.com/artist/1VMUauDPFXyBM4VTmQZREA?si=H1xO77fzS-CWLaihp5Krqg" target="_blank">Big De Litto</a>
           </div>
-		  <!-- Álbum 6-->
+		  <!-- CONCEPTUALES -->
+	<div class="album">
+            <img src="img/knak.png" loading="lazy" alt="Kid Knak" class="album-img" />
+            <h4>Kid Knak (Conceptual)</h4>
+            <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
+         </div>
           <div class="album">
-            <img src="img/cover6.png" loading="lazy" alt="Diseño 3" class="album-img" />
+            <img src="img/cover6.png" loading="lazy" alt="EIGHT" class="album-img" />
             <h4>Eight (Conceptual)</h4>
             <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
           </div>
+		
 		  	<div class="album">
             <img src="img/ramma.png" loading="lazy" alt="Cover Art" class="album-img" />
             <h4>Since 04 (Conceptual)</h4>
