--- a/portfolio.html
+++ b/portfolio.html
@@ -86,6 +86,16 @@
             <a href="https://open.spotify.com/artist/1VMUauDPFXyBM4VTmQZREA?si=H1xO77fzS-CWLaihp5Krqg" target="_blank">Big De Litto</a>
           </div>
 		  <!-- CONCEPTUALES -->
+		<div class="album">
+            <img src="img/chantas.png" loading="lazy" alt="Chantas" class="album-img" />
+            <h4>Chantas (Conceptual)</h4>
+            <a href="https://open.spotify.com/intl-es/track/73HJo11r4w1PSeZWgeFAC0" target="_blank">Valuto, Ara, Sixto</a>
+         </div>
+		<div class="album">
+            <img src="img/flaco.png" loading="lazy" alt="Flaco Vazquez" class="album-img" />
+            <h4>Amor hacia la libertad (Conceptual)</h4>
+            <a href="https://open.spotify.com/intl-es/artist/4Ohr1XPB2qzNiiWRJlelPO" target="_blank">Flaco Vázquez</a>
+         </div>
 	<div class="album">
             <img src="img/knak.png" loading="lazy" alt="Kid Knak" class="album-img" />
             <h4>Kid Knak (Conceptual)</h4>
