--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,13 @@
       </header> 
 	  
  <section class="portafolio" id="portafolio">
-        <h3>Trabajos Realizados</h3>
+        <h3>Portadas Realizadas</h3>
         <div class="album-grid">
-
+<div class="album">
+  <img src="img/selatrop.png" loading="lazy" alt="SELATROP" class="album-img" />
+  <h4>selatrop</h4>
+  <a href="https://soundcloud.com/emilianoberti9/sets/selatrop" target="_blank">berti</3</a>
+</div>
 	<div class="album">
   <img src="img/reversionado.png" loading="lazy" alt="REVERSIONADO" class="album-img" />
   <h4>REVERSIONADO</h4>
@@ -86,6 +90,11 @@
             <a href="https://open.spotify.com/artist/1VMUauDPFXyBM4VTmQZREA?si=H1xO77fzS-CWLaihp5Krqg" target="_blank">Big De Litto</a>
           </div>
 		  <!-- CONCEPTUALES -->
+			<div class="album">
+            <img src="img/cosmic.jpeg" loading="lazy" alt="Cosmic Kid" class="album-img" />
+            <h4>Cosmic (Conceptual)</h4>
+            <a href="https://www.instagram.com/wesstyle.arg" target="_blank">WESSTYLE</a>
+         </div>
 		<div class="album">
             <img src="img/chantas.png" loading="lazy" alt="Chantas" class="album-img" />
             <h4>Chantas (Conceptual)</h4>
@@ -149,3 +158,4 @@
   </script>
 </body>
 </html>
+
