--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   <h3>Trabajos Realizados</h3>
   <div class="album-grid">
 	<div class="album">
-      <img src="img/reversionado.png" alt="Diseño 3" class="album-img" />
-      <h4>REVERSIONADO</h4>
-      <a href="https://open.spotify.com/intl-es/artist/6Qc8W2M7afjKLLOLoc0zjW target="_blank">RodriiLA</a>
-    </div>
+  <img src="img/selatrop.png" loading="lazy" alt="SELATROP" class="album-img" />
+  <h4>selatrop</h4>
+  <a href="https://soundcloud.com/emilianoberti9/sets/selatrop" target="_blank">berti</3</a>
+</div>
     <div class="album">
   <img src="img/cover1.jpg" alt="Diseño 1" class="album-img" />
   <h4>En Mi Mente <3</h4>
@@ -126,3 +126,4 @@
 </script>
 </body>
 </html>
+
