--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 <div class="album">
   <img src="img/selatrop.png" loading="lazy" alt="SELATROP" class="album-img" />
   <h4>selatrop</h4>
-  <a href="https://soundcloud.com/emilianoberti9/sets/selatrop" target="_blank">berti</3</a>
+  <a href="https://soundcloud.com/emilianoberti9/sets/selatrop" target="_blank">"berti </3"</a>
 </div>
 	<div class="album">
   <img src="img/reversionado.png" loading="lazy" alt="REVERSIONADO" class="album-img" />
@@ -158,4 +158,5 @@
   </script>
 </body>
 </html>
+
 
