--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<div class="album">
   <img src="img/selatrop.png" loading="lazy" alt="SELATROP" class="album-img" />
   <h4>selatrop</h4>
-  <a href="https://soundcloud.com/emilianoberti9/sets/selatrop" target="_blank">berti</3</a>
+  <a href="https://soundcloud.com/emilianoberti9/sets/selatrop" target="_blank">berti</a>
 </div>
     <div class="album">
   <img src="img/cover1.jpg" alt="Diseño 1" class="album-img" />
@@ -126,4 +126,5 @@
 </script>
 </body>
 </html>
+
 
