--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main class="main-content">
        <header class="header" id="inicio">
 	   <div class="logo">
-  <img src="img/wesstar_1.svg" alt="Logo WESSTYLE" />
+  <img src="img/wesstar 005.png" alt="wesstar" />
 </div>
         <h2>WESSTYLE</h2>
       </header> 
@@ -126,5 +126,6 @@
 </script>
 </body>
 </html>
+
 
 
