--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
     <main class="main-content">
        <header class="header" id="inicio">
 	   <div class="logo">
-  <img src="img/wesstar_1.svg" alt="Logo WESSTYLE" />
+  <img src="img/wesstar 005.png" alt="wesstar" />
 </div>
         <h2>WESSTYLE</h2>
       </header> 
@@ -147,6 +147,7 @@
   </script>
 </body>
 </html>
+
 
 
 
